--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-boto==2.49.0
-Cactus==3.3.3
-colorama==0.4.6
-colorlog==6.7.0
-Django==1.6.11
-django-markwhat==1.6.2
-keyring==5.7.1
-markdown2==2.4.8
-six==1.16.0
-tornado==6.2
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+Django==4.1.6
+sqlparse==0.4.3
